started rate widget

--- a/test/custom_theme/index.html
+++ b/test/custom_theme/index.html
@@ -34,8 +34,11 @@
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Welcome Joe <span class="caret"></span></a>
 							<ul class="dropdown-menu dropdown-menu-inverse si-pad dropdown-menu-right dropdown-menu-fadeX">
 								<li><a href="#"><i class="icon-user"></i> Account</a></li>
-								<li><a href="#"><i class="icon-blank"></i> Support</a></li>
+								<li role="separator" class="divider"></li>
+								<li><a href="#"><i class="icon-support"></i> Support</a></li>
+								<li role="separator" class="divider"></li>
 								<li><a href="#"><i class="icon-reload"></i> Reload Settings</a></li>
+								<li role="separator" class="divider"></li>
 								<li><a href="#"><i class="icon-logout"></i> Sign Off</a></li>
 							</ul>
 						</li>
@@ -77,6 +80,7 @@
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Websites <span class="caret"></span></a>
 								<ul class="dropdown-menu">
 									<li><a href="http://clients.loantek.com"><i class="icon-link"></i> clients.loantek.com</a></li>
+									<li role="separator" class="divider"></li>
 									<li><a href="http://www.loantek.com"><i class="icon-link"></i> www.loantek.com</a></li>
 								</ul>
 							</li>
@@ -84,13 +88,17 @@
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Quoting <span class="caret"></span></a>
 								<ul class="dropdown-menu">
 									<li><a href="#">Preferences</a></li>
+									<li role="separator" class="divider"></li>
 									<li><a href="#">Reporting</a></li>
+									<li role="separator" class="divider"></li>
 									<li><a href="#">Widgets</a></li>
+									<li role="separator" class="divider"></li>
 									<li><a href="#">API(s)</a></li>
 								</ul>
 							</li>
+							<li><a href="bootstrap-theme.html">Theme</a></li>
 						</ul>
-						<p class="navbar-text navbar-right">text</p>
+						<!-- <p class="navbar-text navbar-right">text</p> -->
 					</div>
 				</nav>
 			</div>
@@ -103,7 +111,7 @@
 			<li><a href="#">Library</a></li>
 			<li class="active">Data</li>
 		</ol>
-							 <style type="text/css">.ltw {display:none;}</style> <link rel="stylesheet" href="//Client.LoanTek.com/Content/widget/css"> <div id="ltWidgetWrapper_F64918"></div> <div id="ltWidgetResultWrapper_R6477"></div> <script type="text/javascript" src="//Client.LoanTek.com/bundles/widget/widget"></script> <script type="text/javascript"> var ltw_ltjq = ltw_ltjq || jQuery.noConflict(true); var ltw_lthlpr = new LoanTekWidget.helpers(ltw_ltjq); </script> <script type="text/javascript"> (function () { var pdfun = function () { /*code ran after DOM created*/ }; var ev = function () { return true; }; var ltwboF64918 = { "panelTitle": "CD Rates", "fields": [ { "field": "depositterm", "cols": 6, "placeholder": "Term" }, { "field": "depositamount", "cols": 6, "placeholder": "Amount $" }, { "field": "submit", "borderRadius": 20 } ], "widgetType": "deposit", "formWidthUnit": "px", "formWidth": 400, "formBorderType": "well", "formBg": "#1e355e", "formTitleColor": "#ffffff", "postDOMCallback": pdfun, "uniqueQualifier": "F64918" }; var ltwoF64918 = { "postUrl": "https://clients-pricing-api.LoanTek.com/v1.0/Deposit/N05KN3YraUFwZ0Y5bWhKYjZEVGhIa0ZvWjlpWmljcXNMNjBrN05rUTg4SEZpL1BjUUNHNktzeDY5c3Rjb0E0c0FBPT01/ApyRequest", "externalValidatorFunction": ev, "clientId": 5, "userId": 1678, "uniqueQualifier": "F64918", "resultDisplayOptions": { "fieldSize": "sm", "fields": [ { "field": "label", "cols": 4, "align": "left", "value": "APY", "color": "#ffffff" }, { "field": "label", "cols": 4, "align": "left", "value": "Total Interest Earned", "color": "#ffffff" }, { "field": "label", "cols": 4, "align": "left", "value": "Amount Plus Interest", "color": "#ffffff" }, { "field": "hr", "marginTopBottom": 4 }, { "field": "depositdatalist", "fieldListOptions": { "fields": [ { "field": "api", "cols": 4, "value": "#{APY}%", "color": "#04428c", "fontSize": 24, "padding": 2 }, { "field": "totalinterestearned", "cols": 4, "value": "$#{TotalInterestEarned}", "fontSize": 20, "color": "#006916", "padding": 2 }, { "field": "amountplusinterest", "cols": 4, "value": "$#{AmountPlusInterest}", "color": "#006916", "fontSize": 20, "padding": 2, "align": "left" }, { "field": "hr", "marginTopBottom": 0 } ] } }, { "field": "nodatamessage", "fontSize": 12 } ], "widgetType": "deposit", "formWidthUnit": "px", "formWidth": 400, "formBorderType": "well", "formBg": "#a1ca46", "uniqueQualifier": "R6477" } }; var ltwfbF64918 = new LoanTekWidget.FormBuild(ltw_ltjq, ltw_lthlpr, ltwboF64918, ltwoF64918); })(); </script>
+							<!-- <style type="text/css">.ltw {display:none;}</style> <link rel="stylesheet" href="//Client.LoanTek.com/Content/widget/css"> <div id="ltWidgetWrapper_F64918"></div> <div id="ltWidgetResultWrapper_R6477"></div> <script type="text/javascript" src="//Client.LoanTek.com/bundles/widget/widget"></script> <script type="text/javascript"> var ltw_ltjq = ltw_ltjq || jQuery.noConflict(true); var ltw_lthlpr = new LoanTekWidget.helpers(ltw_ltjq); </script> <script type="text/javascript"> (function () { var pdfun = function () { /*code ran after DOM created*/ }; var ev = function () { return true; }; var ltwboF64918 = { "panelTitle": "CD Rates", "fields": [ { "field": "depositterm", "cols": 6, "placeholder": "Term" }, { "field": "depositamount", "cols": 6, "placeholder": "Amount $" }, { "field": "submit", "borderRadius": 20 } ], "widgetType": "deposit", "formWidthUnit": "px", "formWidth": 400, "formBorderType": "well", "formBg": "#1e355e", "formTitleColor": "#ffffff", "postDOMCallback": pdfun, "uniqueQualifier": "F64918" }; var ltwoF64918 = { "postUrl": "https://clients-pricing-api.LoanTek.com/v1.0/Deposit/N05KN3YraUFwZ0Y5bWhKYjZEVGhIa0ZvWjlpWmljcXNMNjBrN05rUTg4SEZpL1BjUUNHNktzeDY5c3Rjb0E0c0FBPT01/ApyRequest", "externalValidatorFunction": ev, "clientId": 5, "userId": 1678, "uniqueQualifier": "F64918", "resultDisplayOptions": { "fieldSize": "sm", "fields": [ { "field": "label", "cols": 4, "align": "left", "value": "APY", "color": "#ffffff" }, { "field": "label", "cols": 4, "align": "left", "value": "Total Interest Earned", "color": "#ffffff" }, { "field": "label", "cols": 4, "align": "left", "value": "Amount Plus Interest", "color": "#ffffff" }, { "field": "hr", "marginTopBottom": 4 }, { "field": "depositdatalist", "fieldListOptions": { "fields": [ { "field": "api", "cols": 4, "value": "#{APY}%", "color": "#04428c", "fontSize": 24, "padding": 2 }, { "field": "totalinterestearned", "cols": 4, "value": "$#{TotalInterestEarned}", "fontSize": 20, "color": "#006916", "padding": 2 }, { "field": "amountplusinterest", "cols": 4, "value": "$#{AmountPlusInterest}", "color": "#006916", "fontSize": 20, "padding": 2, "align": "left" }, { "field": "hr", "marginTopBottom": 0 } ] } }, { "field": "nodatamessage", "fontSize": 12 } ], "widgetType": "deposit", "formWidthUnit": "px", "formWidth": 400, "formBorderType": "well", "formBg": "#a1ca46", "uniqueQualifier": "R6477" } }; var ltwfbF64918 = new LoanTekWidget.FormBuild(ltw_ltjq, ltw_lthlpr, ltwboF64918, ltwoF64918); })(); </script> -->
 		<style type="text/css">.c-test{height: 100px; width: 200px; color: #eee; background-color: #333; transition: all 0.4s linear;} .c-test:hover { height: 900px; color: #411; background-color: #adf; }</style>
 		<div class="c-test">content</div>
 
