--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@
 					<ul class="nav navbar-nav">
 						<li><a href="test/papaparse">Papa Parse</a></li>
 						<li><a href="test/metronic">Metronic</a></li>
-						<li><a href="test/deposit_widget">Deposit Widget</a></li>
+						<!-- <li><a href="test/deposit_widget">Deposit Widget</a></li> -->
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" area-expanded="false">Widgets <span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="test/deposit_widget">Deposit Widget</a></li>
+								<li><a href="test/rate_widget">Rate Widget</a></li>
+								<li><a href="test/quote_widget">Quote Widget</a></li>
+							</ul>
+						</li>
 						<!-- <li><a href="test/custom_theme">Custom Theme</a></li> -->
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" area-expanded="false">Custom Theme <span class="caret"></span></a>
