--- a/test/rate_widget/index.html
+++ b/test/rate_widget/index.html
@@ -72,6 +72,7 @@
 						<p class="navbar-text navbar-right">text</p>
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="mortgagerate-test.html">Demo</a></li>
+							<li><a href="datatable-test.html">DT Test</a></li>
 						</ul>
 					</div>
 				</nav>
@@ -269,9 +270,9 @@
 
 	<script type="text/javascript">
 		var qwTest = {
-	"name": "Default Quote Widget",
+	"name": "Default Rate Widget",
 	"buildObject": {
-		"panelTitle": "Deposit Rates",
+		"panelTitle": "Rates",
 		"fields": [{
 			"field": "label",
 			"value": "Start Here",
@@ -281,21 +282,6 @@
 			"cols": 6
 		}, {
 			"field": "submit"
-		}],
-		"widgetType": "deposit"
-	},
-	"resultObject": {
-		"fieldSize": "sm",
-		"fields": [{
-			"field": "label",
-			"cols": 4,
-			"align": "left",
-			"value": "APY"
-		}, {
-			"field": "hr",
-			"marginTopBottom": 4
-		}, {
-			"field": "nodatamessage"
 		}],
 		"widgetType": "deposit"
 	}
