--- a/test/rate_widget/mortgagerate-test.html
+++ b/test/rate_widget/mortgagerate-test.html
@@ -5,12 +5,18 @@
 </head>
 <body>
 <style type="text/css">.ltw {display:none;}</style>
+<link rel="stylesheet" href="//localhost:8080/Content/lib/datatables/dataTables.bootstrap.min.css">
+
 <link rel="stylesheet" href="//localhost:8080/Areas/Widgets/Content/widget.css">
 <link rel="stylesheet" href="//localhost:8080/Areas/Widgets/Content/lt-captcha.css">
 <div id="ltWidgetWrapper_F69736"></div>
 <!-- <div id="ltWidgetResultWrapper_R69445"></div> -->
 <script type="text/javascript" src="//localhost:8080/Scripts/lib/jquery-1/jquery.min.js"></script>
 <script type="text/javascript" src="//localhost:8080/Scripts/lib/jquery/jquery.placeholder.min.js"></script>
+
+<script type="text/javascript" src="//localhost:8080/Scripts/lib/datatables/jquery.dataTables.min.js"></script>
+<script type="text/javascript" src="//localhost:8080/Scripts/lib/datatables/dataTables.bootstrap.min.js"></script>
+
 <script type="text/javascript" src="//localhost:8080/Areas/Widgets/Scripts/post-object/contact.js"></script>
 <script type="text/javascript" src="//localhost:8080/Areas/Widgets/Scripts/post-object/deposit.js"></script>
 <script type="text/javascript" src="//localhost:8080/Areas/Widgets/Scripts/common/lt-captcha.js"></script>
