added ability to have fixed top nav

--- a/test/custom_theme/index.html
+++ b/test/custom_theme/index.html
@@ -20,7 +20,7 @@
 	<![endif]-->
 </head>
 <body>
-	<div class="page-head page-head-inverse">
+	<div class="page-head page-head-inverse page-head-menu-fixed">
 		<div class="page-head-top">
 			<div class="container">
 				<div class="page-logo"><a href="/"><img src="/Content/images/logo-loantek.com-500px.png" alt="LoanTek" class="logo-lt" /></a></div>
@@ -34,11 +34,11 @@
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Welcome Joe <span class="caret"></span></a>
 							<ul class="dropdown-menu dropdown-menu-inverse si-pad dropdown-menu-right dropdown-menu-fadeX">
 								<li><a href="#"><i class="icon-user"></i> Account</a></li>
-								<li role="separator" class="divider"></li>
+								<!-- <li role="separator" class="divider"></li> -->
 								<li><a href="#"><i class="icon-support"></i> Support</a></li>
-								<li role="separator" class="divider"></li>
+								<!-- <li role="separator" class="divider"></li> -->
 								<li><a href="#"><i class="icon-reload"></i> Reload Settings</a></li>
-								<li role="separator" class="divider"></li>
+								<!-- <li role="separator" class="divider"></li> -->
 								<li><a href="#"><i class="icon-logout"></i> Sign Off</a></li>
 							</ul>
 						</li>
@@ -80,7 +80,7 @@
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Websites <span class="caret"></span></a>
 								<ul class="dropdown-menu">
 									<li><a href="http://clients.loantek.com"><i class="icon-link"></i> clients.loantek.com</a></li>
-									<li role="separator" class="divider"></li>
+									<!-- <li role="separator" class="divider"></li> -->
 									<li><a href="http://www.loantek.com"><i class="icon-link"></i> www.loantek.com</a></li>
 								</ul>
 							</li>
@@ -88,11 +88,11 @@
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Quoting <span class="caret"></span></a>
 								<ul class="dropdown-menu">
 									<li><a href="#">Preferences</a></li>
-									<li role="separator" class="divider"></li>
+									<!-- <li role="separator" class="divider"></li> -->
 									<li><a href="#">Reporting</a></li>
-									<li role="separator" class="divider"></li>
+									<!-- <li role="separator" class="divider"></li> -->
 									<li><a href="#">Widgets</a></li>
-									<li role="separator" class="divider"></li>
+									<!-- <li role="separator" class="divider"></li> -->
 									<li><a href="#">API(s)</a></li>
 								</ul>
 							</li>
@@ -106,6 +106,11 @@
 	</div>
 
 	<div class="container">
+		<div class="jumbotron">
+			<h1>Theme example</h1>
+			<p>This is a template showcasing the optional theme stylesheet included in Bootstrap. Use it as a starting point to create something more unique by building on or modifying it.</p>
+			<p><button class="btn btn-lg btn-primary" type="button">Button</button> <button class="btn btn-lg btn-default" type="button">Button</button></p>
+		</div>
 		<ol class="breadcrumb">
 			<li><a href="#">Home</a></li>
 			<li><a href="#">Library</a></li>
