--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 							<ul class="dropdown-menu">
 								<li><a href="test/deposit_widget">Deposit Widget</a></li>
 								<li><a href="test/rate_widget">Rate Widget</a></li>
-								<li><a href="test/quote_widget">Quote Widget</a></li>
+								<!-- <li><a href="test/quote_widget">Quote Widget</a></li> -->
+								<li><a href="test/autoquote_widget">Auto Quote Widget</a></li>
 							</ul>
 						</li>
 						<!-- <li><a href="test/custom_theme">Custom Theme</a></li> -->
